Config is changed

--- a/Software/MessagesHandlerService/App.config
+++ b/Software/MessagesHandlerService/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="ConnectionString" value="Server=ELLAKAMENETE299\\SQLEXPRESS;Database=AlignDB;Trusted_Connection=True" />
+    <add key="ConnectionString" value="Server=ELLAKAMENETE299\\SQLEXPRESS;Database=MyDB;Trusted_Connection=True" />
     <add key="Host" value="kafka:9092" />
-    <add key="GroupName" value="groupId" />
-    <add key="QueueName" value="CovidMessages" />
+    <add key="GroupName" value="group1" />
+    <add key="QueueName" value="akka100" />
     <add key="IsDB" value="false" />
   </appSettings>
 </configuration>
