--- a/Software/MessagesHandlerService/MessagesHandlerService.csproj
+++ b/Software/MessagesHandlerService/MessagesHandlerService.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Akka.Streams.Kafka" Version="1.1.1" />
+    <PackageReference Include="Confluent.Kafka" Version="1.5.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
   </ItemGroup>
 
